--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,10 @@ sqlalchemy = "*"
 
 [dev-packages]
 requests = "*"
+black = "*"
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
